# tex_tool

./: .gitignore  README.md  pyproject.toml
Ltex/combine_dict/: combine_dict.py
Ltex/new_command_to_setting/: new_command.tex  new_command_to_setting.py  setting.json
bib/: README.md  merge_bib.py  merged.bib  report.txt
bib/files/: 4.bib  6.bib  7.bib
bib/files_example/: 1.bib  2.bib  3.bib  5.bib
clean/: comments.py
src/tex_tool/: __init__.py
src/tex_tool/bib/: __init__.py  merge_bib.py
src/tex_tool/clean/: __init__.py  comments.py
src/tex_tool/ltex/: __init__.py  combine_dict.py  new_command_to_setting.py
tests/: test_combine_dict.py  test_comments.py  test_merge_bib.py  test_new_command_to_setting.py
